<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ImageView
        android:id="@+id/logoMMN"
        android:layout_width="310dp"
        android:layout_height="170dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_terbaru"
        app:layout_constraintBottom_toTopOf="@+id/cardJudul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMMN">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/apk"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/ketAwalLog"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:backgroundTint="@color/white_custom"
        app:cardCornerRadius="55dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardJudul">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginEnd="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpEmail"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded2"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/panggilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/inpEmail"
                    android:textColorHint="@color/black"
                    android:background="@drawable/rounded" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpPassword"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded2"
                app:endIconMode="password_toggle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inpEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/panggilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/inpPassword"
                    android:textColorHint="@color/black"
                    android:background="@drawable/rounded"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#306398"
                android:text="Masuk"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inpPassword" />

            <TextView
                android:id="@+id/toRegis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/toRegis"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/garis1"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
            <View
                android:id="@+id/garis1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toRegis" />
<!--            <View-->
<!--                android:id="@+id/garis1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:background="@color/white"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/toRegis" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

