<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <ImageView
        android:id="@+id/logoMMN"
        android:layout_width="310dp"
        android:layout_height="190dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo_terbaru"
        app:layout_constraintBottom_toTopOf="@+id/cardJudul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="120dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardRegis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMMN">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/apk"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="Daftar untuk Masuk Ke Aplikasi"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white_custom"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardJudul">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="250dp"
                android:text="@string/regis"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpNama"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded2"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/panggilNama"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded"
                    android:hint="@string/inpNama"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpEmail"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded2"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inpNama">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/panggilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded"
                    android:hint="@string/inpEmail"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inpPassword"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded2"
                app:endIconMode="password_toggle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inpEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/panggilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/inpPassword"
                    android:textColorHint="@color/black"
                    android:background="@drawable/rounded"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegis"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="#306398"
                android:text="Registrasi"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inpPassword" />

            <TextView
                android:id="@+id/toLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/toLogin"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegis" />

            <View
                android:id="@+id/garis1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

